--- a/website/index.html
+++ b/website/index.html
@@ -191,7 +191,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 dataTable">
+			<div class="col-md-3 col-xs-12 dataTable">
 				<iframe class="tableEmbed" src="Data-Table.html" width="100%" height="97%" style="border: none; margin: none; padding: none;"></iframe>
 				<div class="instructions"><p>Some Blurb can go here. Maybe this is where the attribution of the data source is or some methodology.</p></div>
 			</div>
