--- a/website/index.html
+++ b/website/index.html
@@ -93,14 +93,14 @@
 <body>
 <div class="container-fluid parent">
 	<div class="row">
-		<div class="col-md-4 header">
+		<div class="col-md-4 col-xs-12 header">
 			<div class="page-header">
 				<p>
 					Maryland Coronavirus Dashboard
 				</p>
 			</div>
 		</div>
-		<div class="col-md-8 subheader">
+		<div class="col-md-8 col-xs-12 subheader">
 			<p>
 				This is where instructions will go. Hopefully these instructions will allow the user to understand why we decided to include what we did.
 			</p>
