--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="css.css">
 	<script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src = "javascript.js"></script>
+	<script src = "javascript.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module">
 		// county new cases map
         import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
