--- a/website/index.html
+++ b/website/index.html
@@ -112,13 +112,13 @@
 				<div class="row">
 					<div class="col-md-4 toplineNumbers">
 						<div class="row">
-							<div class="col-md-6 col-xs-6 card">
+							<div class="col-md-6 col-6 card">
 								<div class="subhead">Confirmed Cases</div>
 								<div class="cardNum">83,054</div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum">+1,288</div>
 							</div>
-							<div class="col-md-6 col-xs-6 card">
+							<div class="col-md-6 col-6 card">
 								<div class="subhead">Confirmed Deaths</div>
 								<div class="cardNum">3,304</div>
 								<div class="descBig">Daily Change</div>
@@ -126,13 +126,13 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-md-6 col-xs-6 card">
+							<div class="col-md-6 col-6 card">
 								<div class="subhead">Hospitalized</div>
 								<div class="cardNum">545</div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum">+12</div>
 							</div>
-							<div class="col-md-6 col-xs-6 card">
+							<div class="col-md-6 col-6 card">
 								<div class="subhead">Testing Volume</div>
 								<div class="cardNum">1,075,316</div>
 								<div class="descBig">Daily Change</div>
@@ -140,13 +140,13 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-md-6 col-xs-6 card">
+							<div class="col-md-6 col-6 card">
 								<div class="subhead">Positivity Rate</div>
 								<div class="cardNum">4.48%</div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum">-0.21</div>
 							</div>
-							<div class="col-md-6 col-xs-6 card">
+							<div class="col-md-6 col-6 card">
 								<div class="subhead">Negative Tests</div>
 								<div class="cardNum">742,272</div>
 								<div class="descBig">Daily Change</div>
