--- a/website/index.html
+++ b/website/index.html
@@ -183,9 +183,9 @@
 						<div class="toggleMap" id="zipTotalCases"></div>
 						<div class="toggleMap" id="countyTesting"></div>
 						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset.</p></div>
-						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyNewCases')"> New cases by county</button>
+						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyNewCases')"> Change in cases by county</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTotalCases')"> Total cases by county</button>
-						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipNewCases')"> New cases by zip</button>
+						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipNewCases')"> Change in cases by zip</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipTotalCases')"> Total cases by zip</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTesting')"> Testing by county</button>
                        </div>
