--- a/website/index.html
+++ b/website/index.html
@@ -135,40 +135,40 @@
 		<div class="row">
 			<div class="col-md-9">
 				<div class="row">
-					<div class="col-md-4 toplineNumbers">
+					<div class="col-md-4 order-2 order-lg-1 toplineNumbers">
 						<div class="row">
-							<div class="col-md-6 col-4 card">
+							<div class="col-lg-6 col-4 card">
 								<div class="subhead">Confirmed Cases</div>
 								<div class="cardNum" id="total_cases"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_cases"></div>
 							</div>
-							<div class="col-md-6 col-4 card">
+							<div class="col-lg-6 col-4 card">
 								<div class="subhead">Confirmed Deaths</div>
 								<div class="cardNum" id="total_death"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_death"></div>
 							</div>
 						
-							<div class="col-md-6 col-4 card">
+							<div class="col-lg-6 col-4 card">
 								<div class="subhead">Hospitalized</div>
 								<div class="cardNum" id="total_hospi"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_hospi"></div>
 							</div>
-							<div class="col-md-6 col-4 card">
+							<div class="col-lg-6 col-4 card">
 								<div class="subhead">Testing Volume</div>
 								<div class="cardNum" id="total_tests"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_tests"></div>
 							</div>
-							<div class="col-md-6 col-4 card">
+							<div class="col-lg-6 col-4 card">
 								<div class="subhead">Positivity Rate</div>
 								<div class="cardNum" id="total_posit"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_posit"></div>
 							</div>
-							<div class="col-md-6 col-4 card">
+							<div class="col-lg-6 col-4 card">
 								<div class="subhead">Negative Tests</div>
 								<div class="cardNum" id="total_negat"></div>
 								<div class="descBig">Daily Change</div>
@@ -176,7 +176,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-8 col-xs-12 mapContainer">
+					<div class="col-lg-8 col-xs-12 order-1 order-lg-2 mapContainer">
 						<div class="toggleMap toggleMapVisible" id="countyNewCases"></div>
 						<div class="toggleMap" id="countyTotalCases"></div>
 						<div class="toggleMap" id="zipNewCases"></div>
