--- a/website/index.html
+++ b/website/index.html
@@ -227,8 +227,8 @@
 	<div class="row">
 		<footer class="col-md-12 footer">
 			<p>
-				Dashboard created by Prayag Gordy and Adam Chazan <br>
-				Contact us at:
+				Designed by Prayag Gordy and Adam Chazan <br>
+				prayaggordy@gmail.com, adam.e.chazan@gmail.com
 			</p>
 		</footer>
 	</div>
