--- a/website/index.html
+++ b/website/index.html
@@ -227,7 +227,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 col-xs-12">
+			<div class="col-md-3 col-xs-12 tableContainer">
 				<div id="dataTable"></div>
 			</div>
 		</div>
