--- a/website/index.html
+++ b/website/index.html
@@ -234,7 +234,7 @@
 	<div class="row">
 		<footer class="col-md-12 footer">
 			<p>
-				Designed by Adam Chazan and Prayag Gordt<br>
+				Designed by Adam Chazan and Prayag Gordy<br>
 				adam.e.chazan@gmail.com, prayaggordy@gmail.com
 			</p>
 		</footer>
