Revert "change font"
This reverts commit c51591cabe634df201e17f67f23ee53df3a373ae.

--- a/website/index.html
+++ b/website/index.html
@@ -227,7 +227,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 col-xs-12 tableContainer">
+			<div class="col-md-3 col-xs-12">
 				<div id="dataTable"></div>
 			</div>
 		</div>
