--- a/website/index.html
+++ b/website/index.html
@@ -234,8 +234,8 @@
 	<div class="row">
 		<footer class="col-md-12 footer">
 			<p>
-				Designed by Prayag Gordy and Adam Chazan <br>
-				prayaggordy@gmail.com, adam.e.chazan@gmail.com
+				Designed by Adam Chazan and Prayag Gordy<br>
+				adam.e.chazan@gmail.com, prayaggordy@gmail.com
 			</p>
 		</footer>
 	</div>
