--- a/website/index.html
+++ b/website/index.html
@@ -143,7 +143,7 @@
 		<div class="row">
 			<div class="col-md-9">
 				<div class="row">
-					<div class="col-md-4 order-1 order-md-2 order-lg-1 toplineNumbers">
+					<div class="col-lg-4 col-12 order-1 order-md-2 order-lg-1 toplineNumbers">
 						<div class="row">
 							<div class="col-lg-6 col-4 card">
 								<div class="subhead">Confirmed Cases</div>
