--- a/website/index.html
+++ b/website/index.html
@@ -141,7 +141,7 @@
 		</div>
 	</div>
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-lg-9">
 				<div class="row">
 					<div class="col-xl-4 col-12 order-1 order-md-2 order-xl-1 toplineNumbers">
 						<div class="row">
@@ -227,7 +227,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 col-12 tableContainer">
+			<div class="col-lg-3 col-12 tableContainer">
 				<div id="dataTable"></div>
 			</div>
 		</div>
