--- a/website/index.html
+++ b/website/index.html
@@ -127,14 +127,14 @@
 <body onload="fillData();">
 <div class="container-fluid parent">
 	<div class="row">
-		<div class="col-md-4 col-12 header">
+		<div class="col-xl-4 col-12 header">
 			<div class="page-header">
 				<p>
 					Maryland Coronavirus Dashboard
 				</p>
 			</div>
 		</div>
-		<div class="col-md-8 col-12 subheader">
+		<div class="col-xl-8 col-12 subheader">
 			<p>
 				This is where instructions will go. Hopefully these instructions will allow the user to understand why we decided to include what we did.
 			</p>
@@ -143,40 +143,40 @@
 		<div class="row">
 			<div class="col-lg-9">
 				<div class="row">
-					<div class="col-xl-4 col-12 order-1 order-md-2 order-xl-1 toplineNumbers">
+					<div class="col-12 order-1 order-md-2 order-xl-1 toplineNumbers">
 						<div class="row">
-							<div class="col-xl-6 col-4 card">
+							<div class="col-xl-2 col-4 card">
 								<div class="subhead">Confirmed Cases</div>
 								<div class="cardNum" id="total_cases"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_cases"></div>
 							</div>
-							<div class="col-xl-6 col-4 card">
+							<div class="col-xl-2 col-4 card">
 								<div class="subhead">Confirmed Deaths</div>
 								<div class="cardNum" id="total_death"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_death"></div>
 							</div>
 
-							<div class="col-xl-6 col-4 card">
-								<div class="subhead">Hospitalized</div>
+							<div class="col-xl-2 col-4 card">
+								<div class="subhead">Currently Hospitalized</div>
 								<div class="cardNum" id="total_hospi"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_hospi"></div>
 							</div>
-							<div class="col-xl-6 col-4 card">
+							<div class="col-xl-2 col-4 card">
 								<div class="subhead">Testing Volume</div>
 								<div class="cardNum" id="total_tests"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_tests"></div>
 							</div>
-							<div class="col-xl-6 col-4 card">
+							<div class="col-xl-2 col-4 card">
 								<div class="subhead">Positivity Rate</div>
 								<div class="cardNum" id="total_posit"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_posit"></div>
 							</div>
-							<div class="col-xl-6 col-4 card">
+							<div class="col-xl-2 col-4 card">
 								<div class="subhead">Negative Tests</div>
 								<div class="cardNum" id="total_negat"></div>
 								<div class="descBig">Daily Change</div>
@@ -184,7 +184,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-xl-8 col-12 order-2 order-md-1 order-xl-2 mapContainer">
+					<div class="col-12 order-2 order-md-1 order-xl-2 mapContainer">
 						<div class="toggleMap toggleMapVisible" id="countyNewCases"></div>
 						<div class="toggleMap" id="countyTotalCases"></div>
 						<div class="toggleMap" id="zipNewCases"></div>
