--- a/website/index.html
+++ b/website/index.html
@@ -143,7 +143,7 @@
 		<div class="row">
 			<div class="col-lg-9">
 				<div class="row">
-					<div class="col-12 order-1 order-md-2 order-xl-1 toplineNumbers">
+					<div class="col-12 order-1 order-md-2 toplineNumbers">
 						<div class="row">
 							<div class="col-xl-2 col-4 card">
 								<div class="subhead">Confirmed Cases</div>
@@ -184,7 +184,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 order-2 order-md-1 order-xl-2 mapContainer">
+					<div class="col-12 order-2 order-md-1 mapContainer">
 						<div class="toggleMap toggleMapVisible" id="countyNewCases"></div>
 						<div class="toggleMap" id="countyTotalCases"></div>
 						<div class="toggleMap" id="zipNewCases"></div>
