--- a/website/index.html
+++ b/website/index.html
@@ -185,11 +185,11 @@
 						</div>
 					</div>
 					<div class="col-12 order-2 order-md-1 mapContainer">
-						<div class="toggleMap toggleMapVisible" id="countyNewCases"></div>
-						<div class="toggleMap" id="countyTotalCases"></div>
-						<div class="toggleMap" id="zipNewCases"></div>
-						<div class="toggleMap" id="zipTotalCases"></div>
-						<div class="toggleMap" id="countyTesting"></div>
+						<div class="col-xl-10 toggleMap toggleMapVisible" id="countyNewCases"></div>
+						<div class="col-xl-10 toggleMap" id="countyTotalCases"></div>
+						<div class="col-xl-10 toggleMap" id="zipNewCases"></div>
+						<div class="col-xl-10 toggleMap" id="zipTotalCases"></div>
+						<div class="col-xl-10 toggleMap" id="countyTesting"></div>
 						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<div class="btn-group flex-wrap" role="group">
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyNewCases')"> Change in cases by county</button>
