--- a/website/index.html
+++ b/website/index.html
@@ -141,7 +141,7 @@
 		</div>
 	</div>
 		<div class="row">
-			<div class="col-lg-9">
+			<div class="col-lg-9 col-xl-8">
 				<div class="row">
 					<div class="col-12 order-1 order-md-2 toplineNumbers">
 						<div class="row">
@@ -185,11 +185,11 @@
 						</div>
 					</div>
 					<div class="col-12 order-2 order-md-1 mapContainer">
-						<div class="col-xl-11 toggleMap toggleMapVisible" id="countyNewCases"></div>
-						<div class="col-xl-11 toggleMap" id="countyTotalCases"></div>
-						<div class="col-xl-11 toggleMap" id="zipNewCases"></div>
-						<div class="col-xl-11 toggleMap" id="zipTotalCases"></div>
-						<div class="col-xl-11 toggleMap" id="countyTesting"></div>
+						<div class="toggleMap toggleMapVisible" id="countyNewCases"></div>
+						<div class="toggleMap" id="countyTotalCases"></div>
+						<div class="toggleMap" id="zipNewCases"></div>
+						<div class="toggleMap" id="zipTotalCases"></div>
+						<div class="toggleMap" id="countyTesting"></div>
 						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<div class="btn-group flex-wrap" role="group">
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyNewCases')"> Change in cases by county</button>
@@ -227,7 +227,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-12 tableContainer">
+			<div class="col-lg-3 col-xl-4 col-12 tableContainer">
 				<div id="dataTable"></div>
 			</div>
 		</div>
