--- a/website/index.html
+++ b/website/index.html
@@ -229,7 +229,7 @@
         <div class="btn-group flex-wrap" role="group">
           <button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('cases_table')"> Cases</button>
           <button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('deaths_table')"> Deaths</button>
-          <button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('tests_table')"> Tests</button>
+          <button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('tests_table')"> Testing</button>
         </div>
 			</div>
 		</div>
