--- a/website/index.html
+++ b/website/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="css.css">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <script src="PapaParse-5.0.2/papaparse.min.js"></script>
   <script src="jquery-3.5.1.min.js"></script>
   <script>
-  function fillData() {
-    Papa.parse("https://raw.githubusercontent.com/prayaggordy/D3-covid-map/master/data/card_values.csv", {
-      download: true,
-      header: false,
-      complete: function(results) {
-        results = results.data;
-        $("#total_cases").text(results[1][0]);
-        $("#total_death").text(results[1][1]);
-        $("#total_hospi").text(results[1][2]);
-        $("#total_tests").text(results[1][3]);
-        $("#total_posit").text(results[1][4]);
-        $("#total_negat").text(results[1][5]);
-        $("#new_cases").text(results[2][0]);
-        $("#new_death").text(results[2][1]);
-        $("#new_hospi").text(results[2][2]);
-        $("#new_tests").text(results[2][3]);
-        $("#new_posit").text(results[2][4]);
-        $("#new_negat").text(results[2][5]);
-      }
-    });
-  }
-</script>
+    function fillData() {
+      Papa.parse("https://raw.githubusercontent.com/prayaggordy/D3-covid-map/master/data/card_values.csv", {
+        download: true,
+        header: false,
+        complete: function(results) {
+          results = results.data;
+          $("#total_cases").text(results[1][0]);
+          $("#total_death").text(results[1][1]);
+          $("#total_hospi").text(results[1][2]);
+          $("#total_tests").text(results[1][3]);
+          $("#total_posit").text(results[1][4]);
+          $("#total_negat").text(results[1][5]);
+          $("#new_cases").text(results[2][0]);
+          $("#new_death").text(results[2][1]);
+          $("#new_hospi").text(results[2][2]);
+          $("#new_tests").text(results[2][3]);
+          $("#new_posit").text(results[2][4]);
+          $("#new_negat").text(results[2][5]);
+        }
+      });
+    }
+  </script>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src = "javascript.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -129,7 +129,7 @@
 		</div>
 		<div class="col-xl-8 col-12 subheader">
 			<p>
-				This is where instructions will go. Hopefully these instructions will allow the user to understand why we decided to include what we did.
+				COVID-19 is far from over. See the counties and zip codes with increasing case counts; check on hospitalizations, a vital statistic; explore the demographic distribution of cases; and view the underlying data with our new dashboard.
 			</p>
 		</div>
 	</div>
@@ -191,7 +191,7 @@
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipTotalCases')"> Total cases by zip</button>
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTesting')"> Tests per 100,000 by county</button>
 						</div>
-                       </div>
+          </div>
 				</div>
 				<div class="row">
 					<div class="col-md-7 col-12 lineChartContainer">
@@ -199,7 +199,7 @@
 						<div class="toggleLine" id="newCases"></div>
 						<div class="toggleLine" id="newDeaths"></div>
 						<div class="toggleLine" id="positivityRate"></div>
-						<div class="instructions"><p>Instructions</p></div>
+						<div class="instructions"><p>Hover over lines to display values.</p></div>
 						<div class="btn-group flex-wrap" role="group" aria-label="...">
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('hospitalizations')"> Hospitalizations</button>
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('newCases')"> New cases</button>
@@ -207,7 +207,7 @@
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('positivityRate')"> Positivity rate</button>
 						</div>
 					</div>
-					<div class="col-md-5 col-12 barChartContainer">
+					<div class="col-md-5 col-12 barChartContainer"> <!-- lineChartContainer looks better on the Mac?  -->
 						<div class="toggleBar toggleBarVisible" id="raceBreakdown"></div>
 						<div class="toggleBar" id="ageBreakdown"></div>
 						<div class="toggleBar" id="genderBreakdown"></div>
@@ -221,10 +221,7 @@
 				</div>
 			</div>
 			<div class="col-lg-3 col-xl-4 col-12 tableContainer">
-        <!-- <div class="toggleTable toggleTableVisible" id="cases_table"></div> -->
-        <embed type="text/html" src="new_cases.html" width="90%" height="90%">
-        <div class="toggleTable" id="deaths_table"></div>
-        <div class="toggleTable" id="tests_table"></div>
+        <iframe src="cases_table.html" width="100%", height="90%" style="border:none;"></iframe>
         <div class="instructions"><p>Testing trend line is approximated.</p></div>
         <div class="btn-group flex-wrap" role="group">
           <button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('cases_table')"> Cases</button>
@@ -237,7 +234,7 @@
 		<footer class="col-12 footer">
 			<p>
 				Designed by Adam Chazan and Prayag Gordy<br>
-				adam.e.chazan@gmail.com, prayaggordy@gmail.com
+				<a href="mailto:adam.e.chazan@gmail.com">adam.e.chazan@gmail.com</a>, <a href="mailto:prayaggordy@gmail.com">prayaggordy@gmail.com</a>
 			</p>
 		</footer>
 	</div>
