--- a/website/index.html
+++ b/website/index.html
@@ -226,8 +226,8 @@
 					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('deaths_table')">Deaths</button>
 					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('tests_table')">Testing</button>
 				</div>
-				<iframe src="cases_table.html" width="100%" , height="95%" style="border:none;"></iframe>
-				<div class="instructions"><p>Testing trend line is approximated.</p></div>
+				<div class="instructions"><br><p>Testing trend line is approximated.</p></div>
+				<iframe src="cases_table.html" width="100%" , height="93%" style="border:none;"></iframe>
 			</div>
 		</div>
 	<div class="row">
