--- a/website/index.html
+++ b/website/index.html
@@ -222,12 +222,14 @@
 			</div>
 			<div class="col-lg-3 col-xl-4 col-12 tableContainer">
 				<div class="btn-group flex-wrap" role="group">
-					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('cases_table')">Cases</button>
-					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('deaths_table')">Deaths</button>
-					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('tests_table')">Testing</button>
+					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('casesTable')">Cases</button>
+					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('deathsTable')">Deaths</button>
+					<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('testsTable')">Testing</button>
 				</div>
 				<div class="instructions"><br><p>Testing trend line is approximated.</p></div>
-				<iframe src="cases_table.html" width="100%" , height="93%" style="border:none;"></iframe>
+				<iframe src="cases_table.html" class="toggleTable toggleTableVisible" id="casesTable" width="100%" , height="93%" style="border:none;"></iframe>
+				<iframe src="deaths_table.html" class="toggleTable" id="deathsTable" width="100%" , height="93%" style="border:none;"></iframe>
+				<iframe src="tests_table.html" class="toggleTable" id="testsTable" width="100%" , height="93%" style="border:none;"></iframe>
 			</div>
 		</div>
 	<div class="row">
