--- a/website/index.html
+++ b/website/index.html
@@ -138,38 +138,38 @@
 				<div class="row">
 					<div class="col-12 order-1 order-md-2 toplineNumbers">
 						<div class="row">
-							<div class="col-xl-2 col-4 card">
+							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Confirmed Cases</div>
 								<div class="cardNum" id="total_cases"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_cases"></div>
 							</div>
-							<div class="col-xl-2 col-4 card">
+							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Confirmed Deaths</div>
 								<div class="cardNum" id="total_death"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_death"></div>
 							</div>
 
-							<div class="col-xl-2 col-4 card">
+							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Currently Hospitalized</div>
 								<div class="cardNum" id="total_hospi"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_hospi"></div>
 							</div>
-							<div class="col-xl-2 col-4 card">
+							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Testing Volume</div>
 								<div class="cardNum" id="total_tests"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_tests"></div>
 							</div>
-							<div class="col-xl-2 col-4 card">
+							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Positivity Rate</div>
 								<div class="cardNum" id="total_posit"></div>
 								<div class="descBig">Daily Change</div>
 								<div class="changeNum" id="new_posit"></div>
 							</div>
-							<div class="col-xl-2 col-4 card">
+							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Negative Tests</div>
 								<div class="cardNum" id="total_negat"></div>
 								<div class="descBig">Daily Change</div>
@@ -183,7 +183,7 @@
 						<div class="toggleMap" id="zipNewCases"></div>
 						<div class="toggleMap" id="zipTotalCases"></div>
 						<div class="toggleMap" id="countyTesting"></div>
-						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset.</p></div>
+						<div class="instructions"><p>Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<div class="btn-group flex-wrap" role="group">
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyNewCases')"> Change in cases by county</button>
 							<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTotalCases')"> Total cases by county</button>
