--- a/website/index.html
+++ b/website/index.html
@@ -178,10 +178,15 @@
 						</div>
 					</div>
 					<div class="col-12 order-2 order-md-1 mapContainer">
+						<div class="toggleMap toggleMapVisible mapTitle" id="countyNewCases">Change in confirmed cases by county</div>
 						<div class="toggleMap toggleMapVisible" id="countyNewCases"></div>
+						<div class="toggleMap mapTitle" id="countyTotalCases">Total confirmed cases by county</div>
 						<div class="toggleMap" id="countyTotalCases"></div>
+						<div class="toggleMap mapTitle" id="zipNewCases">Change in confirmed cases by zip code</div>
 						<div class="toggleMap" id="zipNewCases"></div>
+						<div class="toggleMap mapTitle" id="zipTotalCases">Total confirmed cases by zip code</div>
 						<div class="toggleMap" id="zipTotalCases"></div>
+						<div class="toggleMap mapTitle" id="countyTesting">Total tests per 100,000 by county</div>
 						<div class="toggleMap" id="countyTesting"></div>
 						<div class="instructions"><p>Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<div class="btn-group flex-wrap" role="group">
