--- a/website/index.html
+++ b/website/index.html
@@ -139,40 +139,40 @@
 					<div class="col-12 order-1 order-md-2 toplineNumbers">
 						<div class="row">
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Confirmed Cases</div>
+								<div class="subhead">Confirmed cases</div>
 								<div class="cardNum" id="total_cases"></div>
-								<div class="descBig">Daily Change</div>
+								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_cases"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Confirmed Deaths</div>
+								<div class="subhead">Confirmed deaths</div>
 								<div class="cardNum" id="total_death"></div>
-								<div class="descBig">Daily Change</div>
+								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_death"></div>
 							</div>
 
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Currently Hospitalized</div>
+								<div class="subhead">Currently hospitalized</div>
 								<div class="cardNum" id="total_hospi"></div>
-								<div class="descBig">Daily Change</div>
+								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_hospi"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Testing Volume</div>
+								<div class="subhead">Testing volume</div>
 								<div class="cardNum" id="total_tests"></div>
-								<div class="descBig">Daily Change</div>
+								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_tests"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Positivity Rate</div>
+								<div class="subhead">Positivity rate</div>
 								<div class="cardNum" id="total_posit"></div>
-								<div class="descBig">Daily Change</div>
+								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_posit"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Negative Tests</div>
+								<div class="subhead">Negative tests</div>
 								<div class="cardNum" id="total_negat"></div>
-								<div class="descBig">Daily Change</div>
+								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_negat"></div>
 							</div>
 						</div>
@@ -231,7 +231,7 @@
 					<button id="deathsTableButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('deathsTable')">Deaths</button>
 					<button id="testsTableButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('testsTable')">Testing</button>
 				</div>
-				<div class="instructions"><br><p>Testing trend line is approximated.</p></div>
+				<div class="instructions"><br><p>Testing trend line is approximated and shows positivity rate.</p></div>
 				<iframe src="cases_table.html" class="toggleTable toggleTableVisible" id="casesTable"></iframe>
 				<iframe src="deaths_table.html" class="toggleTable" id="deathsTable"></iframe>
 				<iframe src="tests_table.html" class="toggleTable" id="testsTable"></iframe>
