--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <title>Maryland COVID-19 dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="css.css">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -120,17 +121,10 @@
 <body onload="fillData();">
 <div class="container-fluid parent">
 	<div class="row">
-		<div class="col-xl-4 col-12 header">
+		<div class="col-xl-12 col-12 header">
 			<div class="page-header">
-				<p>
-					Maryland Coronavirus Dashboard
-				</p>
+				<p>Maryland COVID-19 dashboard | <a href="blog/docs/index.html" style="color:white" class="instructions">View our blog</a></p>
 			</div>
-		</div>
-		<div class="col-xl-8 col-12 subheader">
-			<!-- <p>
-				COVID-19 is far from over. See the counties and zip codes with increasing case counts; check on hospitalizations, a vital statistic; explore the demographic distribution of cases; and view the underlying data with our new dashboard.
-			</p> -->
 		</div>
 	</div>
 		<div class="row">
