--- a/website/index.html
+++ b/website/index.html
@@ -172,15 +172,15 @@
 						</div>
 					</div>
 					<div class="col-12 order-2 order-md-1 mapContainer">
-						<div class="toggleMap toggleMapVisible mapTitle" id="countyNewCases">Change in confirmed cases by county</div>
+						<div class="toggleMap toggleMapVisible mapTitle" id="countyNewCasesTitle">Change in confirmed cases by county</div>
 						<div class="toggleMap toggleMapVisible map" id="countyNewCases"></div>
-						<div class="toggleMap mapTitle" id="countyTotalCases">Total confirmed cases by county</div>
+						<div class="toggleMap mapTitle" id="countyTotalCasesTitle">Total confirmed cases by county</div>
 						<div class="toggleMap map" id="countyTotalCases"></div>
-						<div class="toggleMap mapTitle" id="zipNewCases">Change in confirmed cases by zip code</div>
+						<div class="toggleMap mapTitle" id="zipNewCasesTitle">Change in confirmed cases by zip code</div>
 						<div class="toggleMap map" id="zipNewCases"></div>
-						<div class="toggleMap mapTitle" id="zipTotalCases">Total confirmed cases by zip code</div>
+						<div class="toggleMap mapTitle" id="zipTotalCasesTitle">Total confirmed cases by zip code</div>
 						<div class="toggleMap map" id="zipTotalCases"></div>
-						<div class="toggleMap mapTitle" id="countyTesting">Total tests per 100,000 by county</div>
+						<div class="toggleMap mapTitle" id="countyTestingTitle">Total tests per 100,000 by county</div>
 						<div class="toggleMap map" id="countyTesting"></div>
 						<div class="instructions"><p>Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<div class="btn-group flex-wrap" role="group">
