--- a/website/index.html
+++ b/website/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <script src="PapaParse-5.0.2/papaparse.min.js"></script>
   <script src="jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script>
     function fillData() {
       Papa.parse("https://raw.githubusercontent.com/prayaggordy/D3-covid-map/master/data/card_values.csv", {
@@ -119,14 +120,26 @@
 </head>
 
 <body onload="fillData();">
-<div class="container-fluid parent">
-	<div class="row">
-		<div class="col-xl-12 col-12 header">
-			<div class="page-header">
-				<p>Maryland COVID-19 dashboard | <a href="blog/docs/index.html" style="color:white" class="instructions">View our blog</a></p>
-			</div>
+	<nav class="navbar navbar-expand-lg sticky-top">
+		<a class="navbar-brand" href="#">Maryland COVID Dashboard</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></i></span>
+		</button>
+		<div class="collapse navbar-collapse justify-content-stretch" id="navbarNav">
+			<ul class="navbar-nav ml-auto">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Blog</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">About</a>
+			</li>
+			</ul>
 		</div>
-	</div>
+	</nav>
+	<div class="container-fluid parent">
 		<div class="row">
 			<div class="col-lg-9 col-xl-8">
 				<div class="row">
@@ -190,7 +203,7 @@
 							<button id="zipTotalCasesButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipTotalCases')"> Total cases by zip</button>
 							<button id="countyTestingButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTesting')"> Tests per 100,000 by county</button>
 						</div>
-          </div>
+		</div>
 				</div>
 				<div class="row">
 					<div class="col-md-7 col-12 lineChartContainer">
@@ -231,13 +244,13 @@
 				<iframe src="tests_table.html" class="toggleTable" id="testsTable"></iframe>
 			</div>
 		</div>
-	<div class="row">
-		<footer class="col-12 footer">
-			<p>
-				Designed by Adam Chazan and Prayag Gordy<br>
-				<a href="mailto:adam.e.chazan@gmail.com">adam.e.chazan@gmail.com</a>, <a href="mailto:prayaggordy@gmail.com">prayaggordy@gmail.com</a>
-			</p>
-		</footer>
+		<div class="row">
+			<footer class="col-12 footer">
+				<p>
+					Designed by Adam Chazan and Prayag Gordy<br>
+					<a href="mailto:adam.e.chazan@gmail.com">adam.e.chazan@gmail.com</a>, <a href="mailto:prayaggordy@gmail.com">prayaggordy@gmail.com</a>
+				</p>
+			</footer>
+		</div>
 	</div>
-</div>
 </body>
