--- a/website/index.html
+++ b/website/index.html
@@ -128,10 +128,10 @@
 		<div class="collapse navbar-collapse justify-content-stretch" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="#">Blog</a>
+				<a class="nav-link" href="blog/docs/index.html">Blog</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">About</a>
+				<a class="nav-link" href="blog/docs/about.html">About</a>
 			</li>
 			</ul>
 		</div>
