--- a/website/index.html
+++ b/website/index.html
@@ -143,38 +143,38 @@
 					<div class="col-12 order-1 order-md-2 toplineNumbers">
 						<div class="row">
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Confirmed cases</div>
+								<div class="subhead">Confirmed Cases</div>
 								<div class="cardNum" id="total_cases"></div>
 								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_cases"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Confirmed deaths</div>
+								<div class="subhead">Confirmed Deaths</div>
 								<div class="cardNum" id="total_death"></div>
 								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_death"></div>
 							</div>
 
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Currently hospitalized</div>
+								<div class="subhead">Currently Hospitalized</div>
 								<div class="cardNum" id="total_hospi"></div>
 								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_hospi"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Testing volume</div>
+								<div class="subhead">Testing Volume</div>
 								<div class="cardNum" id="total_tests"></div>
 								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_tests"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Positivity rate</div>
+								<div class="subhead">Positivity Rate</div>
 								<div class="cardNum" id="total_posit"></div>
 								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_posit"></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
-								<div class="subhead">Negative tests</div>
+								<div class="subhead">Negative Tests</div>
 								<div class="cardNum" id="total_negat"></div>
 								<div class="descBig">Daily change</div>
 								<div class="changeNum" id="new_negat"></div>
