--- a/website/index.html
+++ b/website/index.html
@@ -144,39 +144,33 @@
 							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Confirmed Cases</div>
 								<div class="cardNum" id="total_cases"></div>
-								<div class="descBig">Daily change</div>
-								<div class="changeNum" id="new_cases"></div>
+								<div class="changeToday">Daily change: <span id="new_cases" style="font-weight: 700;"></span></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Confirmed Deaths</div>
 								<div class="cardNum" id="total_death"></div>
-								<div class="descBig">Daily change</div>
-								<div class="changeNum" id="new_death"></div>
+								<div class="changeToday">Daily change: <span id="new_death" style="font-weight: 700;"></span></div>
 							</div>
 
 							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Currently Hospitalized</div>
 								<div class="cardNum" id="total_hospi"></div>
-								<div class="descBig">Daily change</div>
-								<div class="changeNum" id="new_hospi"></div>
+								<div class="changeToday">Daily change: <span id="new_hospi" style="font-weight: 700;"></span></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Testing Volume</div>
 								<div class="cardNum" id="total_tests"></div>
-								<div class="descBig">Daily change</div>
-								<div class="changeNum" id="new_tests"></div>
+								<div class="changeToday">Daily change: <span id="new_tests" style="font-weight: 700;"></span></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Positivity Rate</div>
 								<div class="cardNum" id="total_posit"></div>
-								<div class="descBig">Daily change</div>
-								<div class="changeNum" id="new_posit"></div>
+								<div class="changeToday">Daily change: <span id="new_posit" style="font-weight: 700;"></span></div>
 							</div>
 							<div class="col-xl-2 col-md-4 col-6 card">
 								<div class="subhead">Negative Tests</div>
 								<div class="cardNum" id="total_negat"></div>
-								<div class="descBig">Daily change</div>
-								<div class="changeNum" id="new_negat"></div>
+								<div class="changeToday">Daily change: <span id="new_negat" style="font-weight: 700;"></span></div>
 							</div>
 						</div>
 					</div>
