--- a/website/index.html
+++ b/website/index.html
@@ -175,11 +175,11 @@
 						</div>
 					</div>
 					<div class="col-12 order-2 order-md-1 mapContainer">
-						<div class="toggleMap toggleMapVisible mapTitle" id="countyNewCasesTitle">Change in confirmed cases by county</div>
+						<div class="toggleMap toggleMapVisible mapTitle" id="countyNewCasesTitle">Change in confirmed cases over the last two weeks (by county)</div>
 						<div class="toggleMap toggleMapVisible map" id="countyNewCases"></div>
 						<div class="toggleMap mapTitle" id="countyTotalCasesTitle">Total confirmed cases by county</div>
 						<div class="toggleMap map" id="countyTotalCases"></div>
-						<div class="toggleMap mapTitle" id="zipNewCasesTitle">Change in confirmed cases by zip code</div>
+						<div class="toggleMap mapTitle" id="zipNewCasesTitle">Change in confirmed cases over the last two weeks (by zip code)</div>
 						<div class="toggleMap map" id="zipNewCases"></div>
 						<div class="toggleMap mapTitle" id="zipTotalCasesTitle">Total confirmed cases by zip code</div>
 						<div class="toggleMap map" id="zipTotalCases"></div>
