add first blog post

--- a/website/index.html
+++ b/website/index.html
@@ -120,7 +120,7 @@
 
 <body onload="fillData();">
 	<nav class="navbar navbar-expand-lg sticky-top">
-		<a class="navbar-brand" href="#">Maryland COVID-19 Dashboard</a>
+		<a class="navbar-brand" href="#">Maryland COVID-19 Tracker</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></i></span>
 		</button>
