--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <title>Maryland COVID-19 dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="css.css">
-  <script src="PapaParse-5.0.2/papaparse.min.js"></script>
-  <script src="jquery-3.5.1.min.js"></script>
+  <script src="website/PapaParse-5.0.2/papaparse.min.js"></script>
+  <script src="website/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167555707-2"></script>
@@ -39,7 +39,7 @@
     }
   </script>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<script src = "javascript.js"></script>
+	<script src="javascript.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="module">
 		// county new cases map
@@ -136,10 +136,10 @@
 		<div class="collapse navbar-collapse justify-content-stretch" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-				<a class="nav-link" href="blog/docs/index.html">Blog</a>
+				<a class="nav-link" href="website/blog/docs/index.html">Blog</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="blog/docs/about.html">About</a>
+				<a class="nav-link" href="website/blog/docs/about.html">About</a>
 			</li>
 			</ul>
 		</div>
@@ -238,9 +238,9 @@
 					<button id="testsTableButton" type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleTable('testsTable')">Testing</button>
 				</div>
 				<div class="instructions"><br><p>Testing trend line is approximated and shows positivity rate.</p></div>
-				<iframe src="cases_table.html" class="toggleTable toggleTableVisible" id="casesTable"></iframe>
-				<iframe src="deaths_table.html" class="toggleTable" id="deathsTable"></iframe>
-				<iframe src="tests_table.html" class="toggleTable" id="testsTable"></iframe>
+				<iframe src="website/cases_table.html" class="toggleTable toggleTableVisible" id="casesTable"></iframe>
+				<iframe src="website/deaths_table.html" class="toggleTable" id="deathsTable"></iframe>
+				<iframe src="website/tests_table.html" class="toggleTable" id="testsTable"></iframe>
 			</div>
 		</div>
 		<div class="row">
