--- a/website/index.html
+++ b/website/index.html
@@ -5,9 +5,9 @@
 	<meta property="og:title" content="Maryland COVID-19 Tracker" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://mdcovidtracker.com/" />
-	<meta property="og:image" content="C:\Users\Adam\Documents\GitHub\adamchzn\D3-covid-map\website\blog\_posts\2020-08-12-welcome-to-our-dashboard\dashboard" />
+	<meta property="og:image" content="C:\Users\Adam\Documents\GitHub\adamchzn\D3-covid-map\website\blog\_posts\2020-08-12-welcome-to-our-dashboard\dashboard.png" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="css.css">
   <script src="PapaParse-5.0.2/papaparse.min.js"></script>
   <script src="jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
